--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@
     /* margin: 10% 8%; */
     /* width: 20%; */
     font-size: 2.3vw;
-    margin: 10% 0% 2% 8%;
+    /* margin: 10% 0% 2% 8%; */
+    margin-top: 10%;
     /* margin-left: 8%; */
 }
 
@@ -65,9 +66,11 @@
     color: white;
     width: 37%;
     /* margin: -9% 8%; */
-    text-align: justify;
+    text-align: center;
     font-size: 1.07vw;
-    margin: 2% 0% 2% 8%;
+    /* margin: 2% 0% 2% 8%; */
+    margin: auto;
+    margin-top: 2%;
 }
 
 .nav-item a:after {
@@ -228,3 +231,12 @@ ul.productcategories li:hover {
 }
 
 /* style for product sections ensd */
+
+
+/* media queries */
+
+@media (max-width: 1199px){
+    .productBtns * {
+        font-size: 13px;
+    }
+}
